--- a/frontend/src/components/home.css
+++ b/frontend/src/components/home.css
@@ -1,8 +1,14 @@
 .img{
-	width: 100px;
+	width: 150px;
 }
 
 .card{
 	align-items: center;
+	min-height: 800px;
+	vertical-align: center;
+	padding-top: 10em;
 }
 
+.btn{
+	align-self:baseline;
+}
